--- a/Reports/Final/team_londonsw.tex
+++ b/Reports/Final/team_londonsw.tex
@@ -338,48 +338,50 @@ However, tests involving the Ticker were done using main() methods, because we f
 \paragraph{}
 When the user starts the system, they get presented with a start screen. After pressing the start button, the user gets presented with a choice of modes: opening a map or creating a new map. The screens are loaded using a series of controllers. A singleton instance of the StartUpController is made, which controls the first few screens.
 \paragraph{}
-Opening a map opens a File dialog where the user can open a pre-made map file. The simulation comes with some map files pre-built for the user. This then brings the user to the simulation screen. The StartUpController hands control over to the SimulationController, which handles drawing the SimulationScreen. 
+Opening a map opens a File dialog where the user can open a pre-made map file. The simulation comes with some map files pre-built for the user. This then brings the user to the simulation screen. The StartUpController hands control to the SimulationController, which handles drawing the SimulationScreen. 
 \paragraph{}
-Choosing to make a map brings the user to the Map Maker screen. They choose a width and height of a map, place components on it, and save it as a new map. The user can then run the simulation on it. The StartUpController hands control over to the MapMakerController, which handles drawing the MapMakerScreen.
+Choosing to make a map brings the user to the Map Maker screen. They choose a width and height of a map, place components on it, and save it as a new map. The user can then run the simulation on it. The StartUpController hands control to the MapMakerController, which handles drawing the MapMakerScreen.
 \paragraph{}
-Here is a use-case diagram that describes the steps the user can take in our system:
+This is a use-case diagram that describes the steps the user can take in our system:
 \paragraph{}
 \centerline{ \includegraphics[scale=0.5]{UseCase}}
 
 \section{Simulation Screen}
 \paragraph{}
-Aimed at making a user-oriented simulation system, we decided to have a main simulation screen where users can both monitor the simulation process and control the simulation system by using various controls. Users would load maps from file to run the simulation on.
+Aimed at making a user-oriented simulation system, we have a main simulation screen where users can both monitor the simulation process and control the simulation system by using various controls. Users would load maps from file to run the simulation on.
 \subsection{Loading Maps}
 
 \subsection{Overall Screen Structure}
 \subsubsection{JavaFX Scene Builder}
 \paragraph{}
-JavaFX Scene Builder is a visual layout tool that lets users to quickly design JavaFX application user interfaces, without coding, but by dragging and dropping UI component to a work area, modifying their properties and applying style sheets. The FXML code which is automatically generated can be combined with Java projects by binding the UI to the application's logic to handle the events and actions taken on each element, we chose JavaFX Scene Builder as our main user interfaces development tool at first.
+JavaFX Scene Builder is a visual layout tool that lets users to quickly design JavaFX application user interfaces by dragging and dropping UI component to a work area, modifying their properties and applying style sheets. The FXML code which is automatically generated can be combined with Java projects by binding the UI to the application's logic to handle the events and actions taken on each element. At first, we chose JavaFX Scene Builder as our main GUI development tool.
 \paragraph{}
-Problems arose after we finished building FXML file and  tried to connect the UI interface with simulation models. We found only one controller can be used in a FXML file which means we need to figure out how to communicate between different controllers. This problem first arose when we loaded pre-made map into the simulation. 
+Problems arose after we finished building FXML files and tried to connect the UI interface with simulation models. We found only one controller can be used in a FXML file which means we need to figure out how to communicate between different controllers. This problem first arose when we loaded pre-made maps into the simulation. 
 \paragraph{}
-Users need to choose a pre-made map before going into simulation screen, this will need an intermediate controller to deliver map name between two interfaces. There will be lots of this kind of communication so that lots of intermediate controllers need to be added which will increase complexity potentially. Thinking about this, we finally gave up JavaFX Scene Builder, decided to use pure JavaFX.
+Users need to choose a pre-made map before going into simulation screen, this needed an intermediate controller to deliver map name between two interfaces. There will be lots of this kind of communication so many intermediate controllers need to be added which could increase complexity. Thinking about this, we finally gave up JavaFX Scene Builder, decided to use pure JavaFX.
 
 \subsubsection{Simulation Screen}
 \paragraph{}
-The simulation screen Interface was built using Model-View-Controller (MVC) architecture pattern. SimulationController.java is the controller to draw the screen and generate the log for the simulation. SimulationScreen.java is the corresponding model used to manage UI components of the interface. 
+The simulation screen was built using Model-View-Controller (MVC) architecture pattern. SimulationController.java is the controller to draw the screen and generate the log for the simulation. SimulationScreen.java is the corresponding view used to manage UI components of the interface. The model is read from the Map components that are loaded.
 \paragraph{}
-We used the built-in layout container classes, called panes that are available with the JavaFX SDK to manage UI components of simulation screen. The JavaFX SDK provides several layout panes for the easy setup and management of classic layouts such as rows, columns, stacks, titles, and others. As a window is resized, the layout pane automatically repositions and resizes the nodes that it contains according to the properties of the nodes. We used BorderPane layout pane for the simulation screen. The BorderPane layout pane provides five regions in which to place nodes: top, bottom, left, right and center. 
+We used the built-in layout container classes, called panes that are available with the JavaFX SDK to manage UI components of simulation screen. The JavaFX SDK provides several layout panes for the easy setup and management of classic layouts such as rows, columns, stacks, titles, and others. We used the BorderPane layout pane for the simulation screen. The BorderPane layout pane provides five regions in which to place nodes: top, bottom, left, right and center. 
 \paragraph{}
-To keep the interface simple and clear, only three parts were used in our simulation screen: top, center and right. Title of the simulation screen "LondonSW Simulation System" was set on the top of the BorderPane . We used the center part to load the chosen pre-made map in which simulation process will happen. The right part was mainly used to monitor and control the simulation process. Here we used the VBox layout pane to make sure nodes are arranged in a single column. 
+To keep the interface simple, only three parts were used in our simulation screen: top, center and right. Title of the simulation screen "LondonSW Simulation System" was set on the top of the BorderPane. We used the center part to load the chosen pre-made map in which simulation process will happen. The right part was mainly used to monitor and control the simulation process. Here we used the VBox layout pane to make sure nodes are arranged in a single column. 
 \paragraph{}
 Labels including "Number of Cars", "Ticker interval", "Traffic Light Duration", "Time Ticked", "Vehicle Time Spent Standing" were set for simulation monitor to help users have a better understand about how is the simulation process going. 
 \paragraph{}
-"Start" and "Reset" buttons are used to control whether to start or stop the simulation process. Users can click "Add Ambulance" to add an ambulance whose behavior is aggressive and can also delete it since once an ambulance is added the button will be "Delete Ambulance". There is a "Set Traffic Light duration" button. Once it is clicked, there will be a dialog allows users to set traffic interval(100-1000 millisecond) by a spinner. "Disable Traffic Light" is used to delete all traffic lights of the map and "Enable Traffic Light" to restore all traffic lights to the map. This is to simulate situation in which traffic lights cannot work properly. 
+"Start" and "Reset" buttons are used to control whether to start or stop the simulation process. Users can click "Add Ambulance" to add an ambulance whose behavior is aggressive and can also delete it. There is a "Set Traffic Light duration" button. Once it is clicked, there will be a dialog allows users to set traffic interval(100-1000 millisecond) by a spinner. "Disable Traffic Light" is used to delete all traffic lights of the map and "Enable Traffic Light" to restore all traffic lights to the map. This is to simulate situation in which traffic lights cannot work properly. 
 \paragraph{}
-We used a slider to control number of cars in the system. Users can set number of cars they want as long as  it is in the available range. The minimum car number is 1, the maximum number is set automatically depends on the overall number of slots of all lanes in the map ($MaxCarNumber=0.6*SlotsNumber$). This means the simulation process won't crash due to too many cars results in no slot is available and to make sure the traffic can be coordinated properly. 
+We used a slider to control number of cars in the system. Users can set number of cars they want as long as it is in the available range. The minimum car number is 1, the maximum number is set automatically depends on the overall number of slots of all lanes in the map ($MaxCarNumber=0.6*SlotsNumber$). This means the simulation process won't crash due to too many cars results in no slot is available and to make sure the traffic can be coordinated properly. 
 \paragraph{}
-In JavaFX a property is more than just a simple value. Each Property provides methods to observe changes made to its value so that we can listen for changes.The valueProperty of the slider can indicate if the slider is in the process of being changed. And it is an observable property, so we registered a change listener to the slider's valueProperty to know when the slider's value is changing. Slider.valueProperty() gives us access to the Property. AddListener(...) expects a ChangeListener of type Number. We created a new class to implement the ChangListener interface. Since we will use this class only once, it's a bit overkill to create an instance of this class and pass it to addListener(...). Instead we used a short form of creating a class and instantiating it which is actually an anonymous inner class that does not have a name. Every time a change occurs, ChangeListener must have a changed(...) method that will be called. Then we decided whether to generate new cars to the system or remove cars from the system by calculating the difference between the oldValue and the newValue of the slider.
-If oldValue is smaller than newValue, new cars $(newValue - oldVlue)$ would be generated to the map. Otherwise, system would delete $(oldValue - newValue)$ cars randomly from the vehicle list. 
+Generating cars is captured by the newValue the slider is set to. 
+If oldValue is smaller than newValue, new cars $(newValue - oldVlue)$ would be generated to the map. 
+Car generation happens with the "generateCar(...)" method. We get a random lane from the map, get an empty slot in that lane, and generate the vehicle there.
+Otherwise, system would delete $(oldValue - newValue)$ cars randomly from the vehicle list. The vehicle gets deleted by calling the VehicleController method "removeVehicle(int i)". It removes a vehicle from the list of all vehicles at index i. The vehicle unsubscribes from the ticker, deletes itself from all databases, then gets set to null. Java garbage collection will then remove that instance completely.
 
 \subsection{Map Graphics}
 \paragraph{}
-For the map creation we are using a suite of Panes which are included in the JavaFX Software Platform. We use stacked panes which allow us to treat different panes like layers and that grants us major management. The whole grid layout consists on a GridPane which is a flexible grid of rows and columns that holds in each row and column a specific pane. Each pane is a box which can either be grass (empty square), a Road, or an Intersection. All are drawings are of our own authorship because we have used the tool GIMP, an open source graphic editor. The size of each stack pane is dynamic and we are able to change it by changing a resize factor, which is an important attribute used in many of our drawings. 
+The whole Map grid layout consists on a GridPane which is a flexible grid of rows and columns that holds in each row and column a specific pane. Each cell is a StackPane, which can either be grass (empty square), a Road, or an Intersection. All drawings are of our own authorship because we have used the tool GIMP, an open source graphic editor. The size of each stack pane is dynamic and we are able to change it by changing a resize factor, which is an important attribute used in many of our drawings. 
 \subsection{Decorators}
 \paragraph{}
 Our implementation is using the Decorator Pattern to extend the functionalities of each component so that the objects can be drawn by wrapping the original object and invoking a draw method for each component. There are 5 main wrappers MapGridGUIDecorator, IntersectionDecorator, RoadGUIDecorator, TrafficLightDecorator and VehicleGUIDecorator.
