--- a/Reports/Final/Presentation/presentation_final.tex
+++ b/Reports/Final/Presentation/presentation_final.tex
@@ -4,51 +4,49 @@
 \usepackage{tikz}
 \graphicspath{ {images/} }
 \newcommand\RBox[1]{%
-  \tikz\node[draw,rounded corners,align=center,] {#1};%
+ \tikz\node[draw,rounded corners,align=center] {#1};%
 }  
 \author[Team LondonSW]
 {%
    \texorpdfstring{
         \begin{columns}
-            \column{.25\linewidth}
-            \centering
-            \RBox{Violetta Avkhukova}
-            \column{.25\linewidth}
-            \centering
-            \RBox{Felix Anda}
-            \column{.25\linewidth}
-            \centering
+            \column{.30\linewidth}
+            \RBox{ Violetta Avkhukova}
+        \end{columns}
+        \begin{columns}
+            \column{.30\linewidth}
             \RBox{Yakubu Aliyu Doma}
         \end{columns}
-        \vspace{0.5cm}
         \begin{columns}
-            \column{.45\linewidth}
-            \centering
+            \column{.30\linewidth}
             \RBox{Rawan Mohammed Alrahili}
-            \column{.45\linewidth}
-            \centering
+        \end{columns}
+        \begin{columns}
+            \column{.30\linewidth}
+            \RBox{Felix Santiago Anda Basabe}
+        \end{columns}
+        \begin{columns}
+            \column{.30\linewidth}
             \RBox{Jia Liu}
         \end{columns}
         \vspace{-0.3cm}
         \begin{columns}
           \column{0.3\linewidth}
           \raggedleft
-           \includegraphics[width=2 cm]{logo_map}
-            \vspace{-4.8cm}
+           \includegraphics[width=2.0 cm]{logo_map}
+            \vspace{-3 cm}
             \column{0.6\linewidth}
             \raggedright
-            Traffic Simulator\\[1.1ex]
-            7CCSMGPR 2016\\
+            \textbf{7CCSMGPR}\\
             \vspace{-4.8cm}
         \end{columns}
    }
    {}
 }
-\title{Presentation}
+\title{Traffic Simulator}
 \begin{document}
 \begin{frame}
 \titlepage
 \end{frame}
 \end{document}
 Group Logo
-
