--- a/Reports/Final/Presentation/presentation_final.tex
+++ b/Reports/Final/Presentation/presentation_final.tex
@@ -1,4 +1,5 @@
 \documentclass{beamer}
+\usepackage[export]{adjustbox}
 \usetheme{CambridgeUS}
 \useoutertheme{infolines}
 \usepackage{tikz}
@@ -48,5 +49,51 @@
 \begin{frame}
 \titlepage
 \end{frame}
+
+  
+  \begin{frame}
+\frametitle{Aims}
+   \begin{itemize}
+	\item \textbf{Must}
+			\begin{itemize}
+			\item{Cellular Automaton}
+			\item{Vehicle Entry and Exit}
+			\item{ Free Movement and Turning of vehicles}
+			\item{Default Map}
+			\item{Display Simple Animation of Vehicle Movement}	
+		\end{itemize}	
+	\item \textbf{Should}
+			\begin{itemize}
+			\item{Create, Save/Load Maps}
+			\item{Traffic Policies - lane disabling, light durations}
+			\item{Priorities for  Emergency Services}
+		\end{itemize}
+\item \textbf{Could}
+			\begin{itemize}
+			\item{Statistics - time spent at traffic e.t.c}
+			\item{Curved Roads}
+			\item{External Map Sources, e.g OpenStreetMap}
+		\end{itemize}	
+	\end{itemize}	
+  \end{frame}
+  
+  \begin{frame}
+    \frametitle{Design}
+       \begin{itemize}
+	    \item \textbf{Cellular Automata}
+			\begin{itemize}
+			\item{Simple and efficient}
+			\item{Realistic simulation}
+			\item{ }
+		\end{itemize}
+	\end{itemize}
+  \end{frame}
+  
+  	\begin{frame}
+	  \frametitle{Design cont....}
+	    \includegraphics[width=0.50\textwidth, center]{UseCase}
+	  
+	  \end{frame}
+
 \end{document}
 Group Logo
